--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.6.1
+aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
 annotated-types==0.7.0
@@ -22,14 +22,16 @@ confection==0.1.5
 cssselect2==0.8.0
 cymem==2.0.11
 defusedxml==0.7.1
-discord
-discord.py
+discord==2.3.2
+discord.py==2.5.2
 dnspython==2.7.0
 email_validator==2.2.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+filelock==3.18.0
 Flask==3.1.0
 flask-cors==5.0.1
 frozenlist==1.5.0
+fsspec==2025.3.2
 googletrans==3.1.0a0
 gunicorn==23.0.0
 h11==0.9.0
@@ -46,13 +48,32 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 langcodes==3.5.0
 language_data==1.3.0
+llvmlite==0.44.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+more-itertools==10.6.0
+mpmath==1.3.0
 multidict==6.3.2
 murmurhash==1.0.12
-numpy==2.2.4
+networkx==3.4.2
+numba==0.61.0
+numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
 packaging==24.2
 pillow==11.1.0
 preshed==3.0.9
@@ -61,11 +82,12 @@ pycparser==2.22
 pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
-pynacl
+PyNaCl==1.5.0
 pyphen==0.17.2
 python-dotenv==1.1.0
 pytz==2025.2
 qrcode==8.0
+regex==2024.11.6
 requests==2.32.3
 rfc3986==1.5.0
 rich==14.0.0
@@ -78,11 +100,15 @@ spacy==3.8.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
+sympy==1.13.1
 textstat==0.7.5
 thinc==8.3.4
+tiktoken==0.9.0
 tinycss2==1.4.0
+torch==2.6.0
 tornado==6.1
 tqdm==4.67.1
+triton==3.2.0
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.0
