--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.2.2
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
@@ -46,6 +47,7 @@ importlib_metadata==8.6.1
 importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.4.2
 langcodes==3.5.0
 language_data==1.3.0
 llvmlite==0.44.0
@@ -58,6 +60,7 @@ mpmath==1.3.0
 multidict==6.3.2
 murmurhash==1.0.12
 networkx==3.4.2
+nltk==3.9.1
 numba==0.61.0
 numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
@@ -91,6 +94,7 @@ regex==2024.11.6
 requests==2.32.3
 rfc3986==1.5.0
 rich==14.0.0
+rouge_score==0.1.2
 setuptools==78.1.0
 shellingham==1.5.4
 six==1.17.0
