--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ annotated-types==0.7.0
 anyio==3.7.1
 APScheduler==3.6.3
 attrs==25.3.0
+bcrypt==4.3.0
 blinker==1.9.0
 blis==1.2.0
 cachetools==4.2.2
@@ -34,6 +35,7 @@ flask-cors==5.0.1
 frozenlist==1.5.0
 fsspec==2025.3.2
 googletrans==3.1.0a0
+greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.9.0
 h2==3.2.0
@@ -85,6 +87,7 @@ pycparser==2.22
 pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
+PyJWT==2.10.1
 PyNaCl==1.5.0
 pyphen==0.17.2
 python-dotenv==1.1.0
@@ -104,6 +107,7 @@ sniffio==1.3.1
 spacy==3.8.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.40
 srsly==2.5.1
 svgwrite==1.4.3
 sympy==1.13.1
