--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,13 @@ cryptography==44.0.2
 cymem==2.0.11
 deptry==0.23.0
 distro==1.9.0
+emailvalidator==0.3
 filelock==3.18.0
 Flask==3.1.0
 flask-cors==5.0.1
 fsspec==2025.3.2
 googletrans==4.0.2
+greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
 h2==4.2.0
@@ -88,6 +90,7 @@ sniffio==1.3.1
 spacy==3.8.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.40
 srsly==2.5.1
 svgwrite==1.4.3
 sympy==1.13.1
