--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,10 @@ cryptography==44.0.2
 cymem==2.0.11
 deptry==0.23.0
 distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
 emailvalidator==0.3
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 filelock==3.18.0
 Flask==3.1.0
 flask-cors==5.0.1
