--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,6 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
-jwt==1.3.1
 langcodes==3.5.0
 language_data==1.3.0
 llvmlite==0.44.0
@@ -76,6 +75,7 @@ pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 PyYAML==6.0.2
