--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,50 @@
 absl-py==2.2.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.9.0
-backoff==2.2.1
+anyio==3.7.1
+APScheduler==3.6.3
+attrs==25.3.0
 bcrypt==4.3.0
 blinker==1.9.0
-blis==1.3.0
+blis==1.2.0
+cachetools==4.2.2
+cairocffi==1.7.1
 catalogue==2.0.10
 certifi==2025.1.31
 cffi==1.17.1
+chardet==3.0.4
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
-cloudpickle==3.0.0
+cmudict==1.0.32
+colorama==0.4.6
 confection==0.1.5
-cryptography==44.0.2
+cssselect2==0.8.0
 cymem==2.0.11
-deptry==0.23.0
-distro==1.9.0
+defusedxml==0.7.1
+discord==2.3.2
+discord.py==2.5.2
 dnspython==2.7.0
 email_validator==2.2.0
-emailvalidator==0.3
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+fastapi==0.115.12
 filelock==3.18.0
-Flask==3.1.0
-flask-cors==5.0.1
+frozenlist==1.5.0
 fsspec==2025.3.2
-googletrans==4.0.2
+googletrans==3.1.0a0
 greenlet==3.1.1
-gunicorn==23.0.0
-h11==0.14.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==1.0.8
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.10
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
@@ -45,14 +55,14 @@ marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-monotonic==1.6
 more-itertools==10.6.0
 mpmath==1.3.0
+multidict==6.3.2
 murmurhash==1.0.12
 networkx==3.4.2
 nltk==3.9.1
-numba==0.61.2
-numpy==2.2.4
+numba==0.61.0
+numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -66,23 +76,27 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
-openai-whisper==20240930
+openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
 packaging==24.2
-pillow==11.2.1
-posthog==3.24.1
+pillow==11.1.0
 preshed==3.0.9
+propcache==0.3.1
+psycopg2==2.9.10
 pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
+pydantic==2.11.1
+pydantic_core==2.33.0
 Pygments==2.19.1
 PyJWT==2.10.1
-python-dateutil==2.9.0.post0
+PyNaCl==1.5.0
+pyphen==0.17.2
 python-dotenv==1.1.0
-PyYAML==6.0.2
-qrcode==8.1
+python-multipart==0.0.20
+pytz==2025.2
+pyvips==2.2.3
+qrcode==8.0
 regex==2024.11.6
 requests==2.32.3
-requirements-parser==0.11.0
+rfc3986==1.5.0
 rich==14.0.0
 rouge_score==0.1.2
 setuptools==78.1.0
@@ -90,25 +104,33 @@ shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
 sniffio==1.3.1
-spacy==3.8.5
+spacy==3.8.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.40
 srsly==2.5.1
+starlette==0.46.2
 svgwrite==1.4.3
 sympy==1.13.1
-thinc==8.3.6
+textstat==0.7.5
+thinc==8.3.4
 tiktoken==0.9.0
+tinycss2==1.4.0
 torch==2.6.0
+tornado==6.1
 tqdm==4.67.1
 triton==3.2.0
 typer==0.15.2
-types-setuptools==78.1.0.20250329
 typing-inspection==0.4.0
-typing_extensions==4.13.2
-urllib3==2.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.3.0
+uvicorn==0.34.2
 wasabi==1.1.3
-watchdog==6.0.0
 weasel==0.4.1
+webencodings==0.5.1
 Werkzeug==3.1.3
 wrapt==1.17.2
+yarl==1.18.3
+zipp==3.21.0
