--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ email_validator==2.2.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 fastapi==0.115.12
 filelock==3.18.0
+Flask==3.1.0
 frozenlist==1.5.0
 fsspec==2025.3.2
 googletrans==3.1.0a0
@@ -78,6 +79,7 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
 packaging==24.2
+pdf2image==1.17.0
 pillow==11.1.0
 preshed==3.0.9
 propcache==0.3.1
@@ -89,6 +91,7 @@ Pygments==2.19.1
 PyJWT==2.10.1
 PyNaCl==1.5.0
 pyphen==0.17.2
+pytesseract==0.3.13
 python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
